...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addDependent_addMobileNumberEditText"
                android:layout_width="235dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="Mobile Number"
                android:inputType="phone"
                android:textColor="#0000ff" />

            <Button
                android:id="@+id/addDependent_searchButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/searchButton" />

        </LinearLayout>

...
