<resources>

    <string name="app_name">Spain-ITproject</string>
    <string name="dependents_list_name">Dependents</string>
    <string name="callIntent">Call</string>
    <string name="messageIntent">Message</string>
    <string name="addDependentButton">Add Dependent</string>
    <string name="addDependentActivityMessage">To add a dependent, enter their mobile number:</string>
    <string name="searchButton">Search</string>

    <!-- Dialog box titles -->
    <string name="addDependent_displayInfoDialog">Dependent</string>

...
